@@ -1,3 +1,7 @@
+* 2008-02-12 - dennis.sieben@open-xchange.com
+
+  - Bugfix ID#10894 AJP and general monitoring does not work anymore with showRuntimeStats
+  
 * 2007-12-11 - choeger@open-xchange.com
 
   - Bugfix ID#10223
